--- a/src/GalapagoshaTestScr.mxml
+++ b/src/GalapagoshaTestScr.mxml
@@ -59,7 +59,7 @@
 			private var BackImage:Class;
 			[Bindable] 
 			public var imgBack:Bitmap = new BackImage();
-			private var tracker:Tracker;
+			//private var tracker:Tracker;
 			
 			private var sound:Sound = new MySound() as Sound;
 			private var soundChannel:SoundChannel;
@@ -97,11 +97,11 @@
 				stage.displayState = StageDisplayState.FULL_SCREEN_INTERACTIVE;
 				addEventListener(Event.ENTER_FRAME,onEnterFrame);
 				
-				tracker = new Tracker(stage, Cc.log);
+				/*tracker = new Tracker(stage, Cc.log);
 				stage.addChild(tracker);
 				tracker.addEventListener(Tracker.USER_ENTER,onUserEnter);
 				tracker.addEventListener(Tracker.USER_LEAVE,onUserLeave);
-				tracker.addEventListener(Tracker.USER_STOP,onUserStop);
+				tracker.addEventListener(Tracker.USER_STOP,onUserStop);*/
 				
 				beckonVideo.videoObject = new Video(1920,1080);
 				var nc:NetConnection = new NetConnection(); 
@@ -243,11 +243,11 @@
 			}
 			public function getWeight():Number
 			{
-				return tracker.getWeight();
+				return 0//tracker.getWeight();
 			}
 			public function getHeight():Number
 			{
-				return tracker.getHeight();
+				return 0//tracker.getHeight();
 			}
 			
 			protected function windowedapplication1_stateChangeCompleteHandler(event:FlexEvent):void
@@ -293,7 +293,7 @@
 						case "greeting":
 							if(gameSoundChannel.soundTransform.volume!=0)
 							{
-								var t:Tween = new Tween(this,0.5,0,1000,-1,updGameBackground,updGameBackground);
+								var t5:Tween = new Tween(this,0.5,0,1000,-1,updGameBackground,updGameBackground);
 								//TweenLite.to(soundChannel.soundTransform,3,{volume:0.5});
 							}
 							break;
