--- a/src/BananaNinja.mxml
+++ b/src/BananaNinja.mxml
@@ -371,10 +371,10 @@
 					posi.Subtract(new b2Vec2(event.stageX,event.stageY));
 					var dist:Number = Math.abs(posi.Length());
 					trace(dist);
-					if(dist<40) 
+					if(dist<70) 
 					{
 						var objType:String = body.GetUserData();
-						if(objType == "skin")
+						if(objType == "skin"&&(dist<40))
 						{
 							trace("slicing skin");
 							(new MySound() as Sound).play();
