--- a/src/Recipe.mxml
+++ b/src/Recipe.mxml
@@ -212,7 +212,7 @@
 			 width="1044" color="#FFFFFF" styleName="metrHeader"
 			 text="Банановый&#xd;шейк"
 			 text.recipe_blin="Банановые&#xd;блинчики"
-			 text.recipe_cream="Банановое&#xd;мороженное"
+			 text.recipe_cream="Банановое&#xd;мороженое"
 			 text.recipe_zhar="Жареные&#xd;бананы"/>
 	<s:TextArea includeIn="recipe_next,recipe_print" y="466" borderVisible="false"
 				contentBackgroundAlpha="0.0" editable="false" horizontalCenter="0"
