--- a/src/GalapagoshaTestScr.mxml
+++ b/src/GalapagoshaTestScr.mxml
@@ -24,7 +24,6 @@
 	</s:states>
 	<fx:Script>
 		<![CDATA[
-			import Tracker;
 			
 			import com.greensock.TweenLite;
 			import com.junkbyte.console.Cc;
@@ -60,7 +59,6 @@
 			private var BackImage:Class;
 			[Bindable] 
 			public var imgBack:Bitmap = new BackImage();
-			private var tracker:Tracker;
 			
 			private var sound:Sound = new MySound() as Sound;
 			private var soundChannel:SoundChannel;
@@ -104,10 +102,7 @@
 				stage.displayState = StageDisplayState.FULL_SCREEN_INTERACTIVE;
 				
 				
-				tracker = new Tracker(stage, Cc.log);				
-				tracker.addEventListener(Tracker.USER_ENTER,onUserEnter);
-				//tracker.addEventListener(Tracker.USER_LEAVE,onUserLeave);
-				tracker.addEventListener(Tracker.USER_STOP,onUserStop);
+
 				
 				beckonVideo.videoObject = new Video(1920,1080);
 				var nc:NetConnection = new NetConnection(); 
@@ -250,11 +245,11 @@
 			}
 			public function getWeight():Number
 			{
-				return tracker.getWeight();
+				return 0;
 			}
 			public function getHeight():Number
 			{
-				return tracker.getHeight();
+				return 0;
 			}
 			
 			protected function windowedapplication1_stateChangeCompleteHandler(event:FlexEvent):void
@@ -393,13 +388,6 @@
 			
 			protected function control(event:KeyboardEvent):void
 			{
-				if (event.keyCode == Keyboard.K) {
-					if (stage.contains(tracker)) {
-						stage.removeChild(tracker);
-					} else {
-						stage.addChild(tracker);
-					}
-				}
 				
 			}
 			
